--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -58,30 +58,72 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
-    "\n",
+    "# first check the length of the input strings\n",
+    "  if len(word_a) != len(word_b):\n",
+    "    return False\n",
+    "# convert both strings to lowercase to make the check case-insensitive\n",
+    "  word_a = word_a.lower()\n",
+    "  word_b = word_b.lower()\n",
+    "# sort the characters in both strings and compare them\n",
+    "  if sorted(word_a) == sorted(word_b):\n",
+    "    return True\n",
+    "  else:\n",
+    "    return False\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Night\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -99,10 +141,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "  # Modify your existing code here\n",
+    "  # first check the length of the input strings\n",
+    "  if len(word_a) == len(word_b):\n",
+    "  # check for case sensitivity\n",
+    "      if is_case_sensitive == True:\n",
+    "        if sorted(word_a) == sorted(word_b):\n",
+    "          return True\n",
+    "        else:\n",
+    "          return False\n",
+    "      else:\n",
+    "        if sorted(word_a.lower()) == sorted(word_b.lower()):\n",
+    "          return True\n",
+    "        else:\n",
+    "          return False\n",
+    "  else:\n",
+    "    return False\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\", False) # True"
@@ -110,18 +177,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"listen\", True) # False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Listen\", True) # False"
    ]
@@ -139,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new-learner",
+   "display_name": "python-env",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
